@@ -1,19 +1,11 @@
 <!-- Perfwatcher | File "mainMenu.html" | Copyright (c) 2012 Cyril Feraudet | Licensed under the MIT licenses: http://www.opensource.org/licenses/mit-license.php -->
 <ul>
 	<li><a href=""><img id="logo" src="img/perfwatcher.png"/>Perfwatcher</a></li>
-	<li><a href="#">File</a>
+	<li><a href="#">Views</a>
 		<ul>
-			<li><a href="#">New ...</a>
-				<ul>
-					<li><a pwmenuid="menu_new_server">Server</a></li>
-					<li><a pwmenuid="menu_new_container">Container</a></li>
-				</ul>
-			</li>
-			<li><a href="#">Delete</a>
-				<ul>
-					<li><a pwmenuid="menu_delete_node">Server / Container</a></li>
-				</ul>
-			</li>
+			<li><a pwmenuid="menu_view_new">New</a></li>
+			<li><a pwmenuid="menu_view_open">Open</a></li>
+			<li><a pwmenuid="menu_view_delete">Delete current</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Edit</a>
@@ -33,7 +25,6 @@
 	<li><a href="#">Display</a>
 		<ul>
 			<li><a pwmenuid="menu_display_toggle_tree">Toggle Tree</a></li>
-			<li><a pwmenuid="menu_display_in_new_window">Open in a new window</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Refresh</a>
@@ -43,22 +34,6 @@
 			<li><a pwmenuid="menu_refresh_status">Status</a></li>
 		</ul>
 	</li>
-	<li><a href="#">Views</a>
-		<ul>
-			<li><a pwmenuid="menu_view_new">New</a></li>
-			<li><a pwmenuid="menu_view_open">Open</a></li>
-			<li><a pwmenuid="menu_view_delete">Delete current</a></li>
-		</ul>
-	</li>
-	<!--li><a pwmenuid="#themeselector">Themes</a>
-		<ul>
-			<li><a href="?classic">Classic</a></li>
-			<li><a href="?darkblue">Dark blue</a></li>
-			<li><a href="?energyblue">Energy blue</a></li>
-			<li><a href="?shinyblack">Shiny black</a></li>
-			<li><a href="?summer">Summer</a></li>
-		</ul>
-	</li-->
 	<li><a href="#">About</a>
 		<ul>
 			<li><a pwmenuid="menu_about_box">About...</a></li>
